cabal-version: 2.4

name:                   pistol-plutus
version:                1.0.0
description:            Pistol NFT Marketplace
author:                 nakulthebuilder
maintainer:             operations@iohk.io
license:                Apache-2.0
build-type:             Simple
extra-source-files:     README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Cardano.Marketplace.Marketplace

  build-depends:        bytestring
                      , cardano-api
                      , plutus-ledger
                      , plutus-ledger-api
                      , cardano-binary
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise
                      , aeson
                      , text

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable pistol-plutus
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              pistol-plutus.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , cardano-binary
                      , plutus-ledger
                      , serialise
                      , pistol-plutus
                      , plutus-ledger-api
                      , bytestring
                      , aeson
                      , containers
                      , text
                      , utf8-string
                      , base16-bytestring
                      , cardano-ledger-core